# django-htmx-modal

./: .gitignore  main.py  manage.py  pyproject.toml
config/: settings.py
