[project]
name = "django-htmx-modal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django==5.2",
    "django-browser-reload>=1.21.0",
    "django-extensions>=4.1",
    "django-tailwind>=4.4.2",
    "django-widget-tweaks>=1.5.0",
]
